# Market-Microstructure

./: .gitignore  README.md  main.py  pyproject.toml
data/features/: btcusdt_features.csv
data/processed/: btcusdt_processed.csv  btcusdt_processed_extended.csv  signal_decay_results.json
research/: paper.md  paper.tex  references.bib
results/: market_making.json  rq7_btc.json  rq7_btc_w1.json  rq7_eth.json  rq_analysis_eth.json  rq_analysis_final.json  statistical_analysis.json
src/: __init__.py
src/analysis/: __init__.py
src/analysis/run/: __init__.py  __main__.py  features.py  market_making.py  rq7_market_making.py  rq7_viz.py  run_all.py  statistical.py  visualizations.py
src/data/: __init__.py  generate_calibrated.py  post_collect.py
src/data/collect/: __init__.py  __main__.py  collector.py
src/data/process/: __init__.py  __main__.py  pipeline.py
