[project]
name = "market-microstructure"
version = "0.1.0"
description = "Quantitative research on limit order book dynamics using Binance spot data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "numba>=0.58.0",
    "xgboost>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]
